Aggiunto autenticazione tramite OAuth2
Co-Authored-By: Valerio Parente <92206434+NinthLifeLeft66@users.noreply.github.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.sql.init.platform=postgres
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/esquid
 spring.datasource.username=postgres
@@ -35,3 +35,9 @@ spring.thymeleaf.encoding=UTF-8
 spring.messages.basename=messages/messages
 spring.messages.encoding=ISO-8859-1
 
+#==================================
+# = OAuth configurations
+#==================================
+spring.security.oauth2.client.registration.google.client-id=673113539443-sjitq5gdo12vafpk93qjr3ebclch9ojd.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.provider.google.user-name-attribute=name
